# SecureBootSTM32L496

./: .env.example  .gitignore  CMakeLists.txt  build.ps1  flash.ps1
app/: CMakeLists.txt
app/src/: image_header.c  main.c  system_stm32l4xx.c
bootloader/: CMakeLists.txt
bootloader/src/: main.c
bootloader/src/boot/: boot.c  fault.c  pubkey.c  pubkey.h  verify.c
cmake/: arm-none-eabi.cmake
docs/: boot_process.md
include/: boot.h
include/cmsis/: stm32l496xx.h
ld/: STM32L496ZGTx_FLASH.ld  app.ld  bootloader.ld
shared/crypto/: CMakeLists.txt  ed25519_verify.c  ed25519_verify.h  setup_crypto.ps1
shared/include/: boot.h  image_header.h
shared/include/cmsis/: stm32l496xx.h
src/: main.c  startup_stm32l496xx.s  system_stm32l4xx.c
src/boot/: boot.c
tools/: gen_keys.py  patch_image.py  requirements.txt  sign_image.py
